--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@compodoc/compodoc": "^1.1.23",
     "@nestjs/common": "^11.0.1",
+    "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/mapped-types": "^2.0.5",
     "@nestjs/platform-express": "^11.0.1",
